# RISC-V-Emulator

./: .clang-format  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yaml
.husky/: pre-commit
scripts/: __init__.py  build.py  clean.py  deliver.py  format_all.py  format_cpp.py  format_python.py  lint_python.py  test_runner.py
src/: alu.cc  alu.h  arch.h  config-file.cc  config-file.h  elf-file.cc  elf-file.h  elf.h  framebuffer.cc  framebuffer.h  inst-decoder.cc  inst-decoder.h  inst-formatter.cc  main.cc  memory-bus.cc  memory-bus.h  memory-control.cc  memory-control.h  memory-interface.h  memory.cc  memory.h  mux.h  pipeline.cc  pipeline.h  processor.cc  processor.h  reg-file.h  serial.cc  serial.h  stages.cc  stages.h  sys-status.cc  sys-status.h  test_instructions.py  test_output.py  testing.cc  testing.h
src/Windows/: rv64-emu.vcxproj.filters
src/testdata/: decode-file-inval.test  decode-file-testfile.test  decode-single-inval.test  decode-single-nop.test  decode-testfile.txt
tests/lab2-test-programs/: Makefile  README.txt  hellof.s
tests/lab2-test-programs/src/: basic.s  hellof.c  msg.s  simple-stalls.s  simple.s  triangle.s
tests/lab2-test-programs/testdata/: level1.test  level2.test  level3.test  level4.test  level5.test  level6.test  level9.test
