[project]
name = "rv64-emu"
version = "2025.1.0"
description = "RISC-V 64-bit processor emulator with 5-stage pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["riscv", "emulator", "simulator", "processor", "pipeline", "education"]

dependencies = []

[project.optional-dependencies]
test = [
    "colorama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
build = "scripts.build:main"
clean = "scripts.clean:main"
test = "scripts.test_runner:main"
test-output = "scripts.test_runner:run_output_tests"
format-cpp = "scripts.format_cpp:main"
format-python = "scripts.format_python:main"
format = "scripts.format_all:main"
format-all = "scripts.format_all:main"
lint-python = "scripts.lint_python:main"
deliver = "scripts.deliver:main"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["scripts"]
